tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_16.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := ((((2 - z) * (z DIV x)) + ((200 DIV 0) * (+ z))) + (((+ 200) * (1223 MOD y)) MOD ((- x) + (200 DIV x))));
               q := (~ (((1223 - y) * (y - 200)) = (- (1223 DIV x))));
               z := ((((1223 - y) MOD (+ 2)) + ((+ y) DIV (1223 * 1))) + (((0 DIV 1223) * (- 2)) - (- (+ 1))));
               q := ((((- z) # (- 1)) OR ((y MOD 1) < (2 DIV 200))) & (((z - x) - (z DIV 1)) >= ((- y) DIV (1 - 200))));
               p := (~ (((+ 200) >= (0 * 0)) & ((1223 MOD 1) >= (0 DIV 2))));
               r := (((- (- 1)) DIV (+ (- y))) # (((+ 0) + (x * 200)) MOD ((2 + 2) MOD (y + 2))));
  (* error *)  p := (~ (((q DIV 0) MOD (0 - 0)) >= ((- 2) + (+ x))));
               q := ((- ((- 1) DIV (1 * 1223))) >= ((+ (z DIV z)) MOD (- (- 1))));
               r := ((- ((1223 DIV 200) * (- 2))) = (((1 * y) * (+ 0)) + (- (- 1))));
               r := ((((z MOD 1223) DIV (+ 2)) DIV (- (y * 0))) # (+ (- (1223 MOD 1223))))
END Test17.